Update newsletter page

--- a/newsletters.html
+++ b/newsletters.html
@@ -129,31 +129,38 @@
                     <h4>
                         Below, you can find our past newsletters.
                     </h4>
-                    <a href='./img/newsletters/SMTD_1.pdf' target="_blank" style="text-decoration: none;">
-                        <button class="newsletterButton" type="button">
+                    <div class="row flex-column">
+                        <a href='./img/newsletters/SMTD_1.pdf' target="_blank" style="text-decoration: none; padding: 0.25em 0;">
+                            <button class="newsletterButton" type="button">
                         Newsletter #1
                     </button>
-                    </a>
-                    <a href='./img/newsletters/SMTD_2.pdf' target="_blank" style="text-decoration: none;">
-                        <button class="newsletterButton" type="button">
+                        </a>
+                        <a href='./img/newsletters/SMTD_2.pdf' target="_blank" style="text-decoration: none; padding: 0.25em 0;">
+                            <button class="newsletterButton" type="button">
                         Newsletter #2
                     </button>
-                    </a>
-                    <a href='./img/newsletters/SMTD_3.pdf' target="_blank" style="text-decoration: none;">
-                        <button class="newsletterButton" type="button">
+                        </a>
+                        <a href='./img/newsletters/SMTD_3.pdf' target="_blank" style="text-decoration: none;padding: 0.25em 0;">
+                            <button class="newsletterButton" type="button">
                         Newsletter #3
                     </button>
-                    </a>
-                    <a href='./img/newsletters/SMTD_4.pdf' target="_blank" style="text-decoration: none;">
-                        <button class="newsletterButton" type="button">
+                        </a>
+                        <a href='./img/newsletters/SMTD_4.pdf' target="_blank" style="text-decoration: none; padding: 0.25em 0;">
+                            <button class="newsletterButton" type="button">
                         Newsletter #4
                     </button>
-                    </a>
-                    <a href='./img/newsletters/SMTD_5.pdf' target="_blank" style="text-decoration: none;">
-                        <button class="newsletterButton" type="button">
+                        </a>
+                        <a href='./img/newsletters/SMTD_5.pdf' target="_blank" style="text-decoration: none; padding: 0.25em 0;">
+                            <button class="newsletterButton" type="button">
                         Newsletter #5
                     </button>
-                    </a>
+                        </a>
+                        <a href='./img/newsletters/SMTD_6.pdf' target="_blank" style="text-decoration: none; padding: 0.25em 0;">
+                            <button class="newsletterButton" type="button">
+                        Newsletter #6
+                    </button>
+                        </a>
+                    </div>
                 </div>
             </div>
             <!-- Join List-serv Section -->
