--- a/research.html
+++ b/research.html
@@ -134,7 +134,8 @@
             <!-- Item -->
             <div class='row researchRow'>
                 <h3 class="researchSectionTitle">
-                    <span class="badge badge-primary upcomingTag">Recruiting!</span>&nbsp Fall 2022 — Spring 2023: Knowledge Outcome Evaluation study
+                    <!-- <span class="badge badge-primary upcomingTag">Recruiting!</span>&nbsp  -->
+                    Fall 2022 — Spring 2023: Knowledge Outcome Evaluation study
                 </h3>
                 <br>
                 <p class="researchParagraph">
