--- a/newsletters.html
+++ b/newsletters.html
@@ -127,7 +127,7 @@
                         The Social Media TestDrive team regularly sends newsletters to parents and educators with updates about Social Media TestDrive. We include updates and information about new features, current research studies, answers to FAQs, and any new opportunities.
                     </h4>
                     <h4>
-                        Below, you can find our past newsletters, listed from most recent to least recent.
+                        Below, you can find our past newsletters, listed from the most recent to the least recent.
                     </h4>
                     <div class="row flex-column">
                         <a href='./img/newsletters/SMTD_6.pdf' target="_blank" style="text-decoration: none; padding: 0.25em 0;">
