Publish newsletters onto site

--- a/faq.html
+++ b/faq.html
@@ -226,8 +226,19 @@
                     socialmediatestdrive@gmail.com</a> or Contact Us below. We will do our best to respond within 1–2 business days of receiving your e-mail.
                                 </p>
                             </div>
-                        </div>
 
+                            <div class="col-md-6 rightSide">
+                                <h3 class="questionTitle">
+                                    Can I receive the past emails that were sent on the email list-serv?</h3>
+                                <p>
+                                    Yes. Our past newsletters can be found <a href="/webinars.html#newsletters" target="_blank">here</a>. Social Media TestDrive regularly sends newsletters to educators and parents who join our e-mail listserv with updates
+                                    and relevant information about Social Media TestDrive.
+                                </p>
+                                <p>
+                                    You can join our e-mail listserv to receive future newsletters by clicking <a href="mailto:TESTDRIVE-L-request@cornell.edu?Subject=Join" target="_blank" class="customHyperlink">here</a> and pressing "Send" to join.
+                                </p>
+                            </div>
+                        </div>
                     </div>
                 </div>
 
