--- a/for_educators.html
+++ b/for_educators.html
@@ -138,7 +138,7 @@
                     <h4>
                         Social Media TestDrive prepares young people for real-life experiences in the digital world through learning and practicing within a realistic social media simulation. Our modules are aligned with
                         <a href="https://www.commonsense.org/education/digital-citizenship/curriculum" target="_none">
-              Common Sense Education’s Digital Citizenship Curriculum.</a>
+              Common Sense Education's Digital Citizenship Curriculum.</a>
                     </h4>
                     <a href="testdriveguide.pdf" target="_none" style="text-decoration:none;">
                         <button type="button" class="nicelyRoundedButton" style="margin:3px 6px 3px 0;">
@@ -186,6 +186,24 @@
                 </div>
             </div>
 
+            <!-- Content Row 2 -->
+            <div class="row align-items-center paddedRow">
+                <div class="col-md-6 order-2 order-md-1">
+                    <img width="80%" src="img/newsletters.svg" alt="">
+                </div>
+                <div class='col-md-6 order-1 order-md-2'>
+                    <h1>Regular newsletters with our latest news</h1>
+                    <h4>
+                        The Social Media TestDrive team regularly sends newsletters to educators who are using TestDrive with the latest news about Social Media TestDrive.
+                    </h4>
+                    <h4>
+                        Our past newsletters can be found <a href="/webinars.html#newsletters" target="_blank">here</a>.
+                    </h4>
+                    <h4>To join our e-mail listserv and receive future newsletters, click
+                        <a href="mailto:TESTDRIVE-L-request@cornell.edu?Subject=Join" target="_blank">here</a> and press "Send" to join.
+                    </h4>
+                </div>
+            </div>
             <!-- Testimonials (to be included later, need to sort out permissions)-->
             <!-- <div class="row align-items-center" style="padding-bottom:2em;">
         <div class="col d-flex justify-content-center">
@@ -241,16 +259,16 @@
             </div>
 
             <!-- Join List-serv Section -->
-            <div class="container-fluid">
-                <!-- Title -->
-                <div class="row paddedTop justify-content-center">
+            <!-- <div class="container-fluid"> -->
+            <!-- Title -->
+            <!-- <div class="row paddedTop justify-content-center">
                     <div class="col text-center">
                         <h1> Want to find out more? </h1>
                     </div>
-                </div>
+                </div> -->
 
-                <!-- Subtext -->
-                <div class="row justify-content-center">
+            <!-- Subtext -->
+            <!-- <div class="row justify-content-center">
                     <div class="col-sm-8 col-md-8 col-lg-4 text-center">
                         <h4 class="listServSubtext">
                             You can join our e-mail listserv to hear the latest news about Social Media TestDrive.
@@ -259,10 +277,10 @@
                             Click the button below and press "Send" to join.
                         </h4>
                     </div>
-                </div>
+                </div> -->
 
-                <!-- Join List-serv Button -->
-                <div class="row addPaddingBottom justify-content-center">
+            <!-- Join List-serv Button -->
+            <!-- <div class="row addPaddingBottom justify-content-center">
                     <div class="col d-flex justify-content-center">
                         <a href="mailto:TESTDRIVE-L-request@cornell.edu?Subject=Join" target="_top" class="customHyperlink">
                             <button type="button" class="nicelyRoundedButton">
@@ -271,7 +289,7 @@
                         </a>
                     </div>
                 </div>
-            </div>
+            </div> -->
         </div>
     </main>
     <footer class="page-footer footerVerB">
