--- a/webinars.html
+++ b/webinars.html
@@ -262,6 +262,66 @@
                     </div>
                 </div>
             </div>
+
+            <!-- TestDrive Newsletters -->
+            <div class='container-fluid'>
+                <div class='row justify-content-center footerPageTitle'>
+                    <div class='col-12 text-center'>
+                        <h1>TestDrive Newsletters</h1>
+                    </div>
+                </div>
+
+                <!-- CS -->
+                <div class='row justify-content-center pressItemContainer' id="newsletters">
+                    <div class='col-lg-12 pressLeftContainer align-items-center'>
+                        <h3 class="pressText" id='webinarTitle2'>
+                            Social Media TestDrive: Newsletters with our latest news
+                        </h3>
+                        <p class="pressText">
+                            The Social Media TestDrive team regularly sends newsletters to parents and educators with updates about Social Media TestDrive. We include updates and information about new features, current research studies, answers to FAQs, and any new opportunities.
+                        </p>
+                        <p class="pressText">
+                            Below, you can find our past newsletters, listed from the most recent to the least recent.
+                        </p>
+                        <p class="pressText">
+                            You can also join our e-mail listserv to receive future newsletters. Click <a href="mailto:TESTDRIVE-L-request@cornell.edu?Subject=Join" target="_blank" class="customHyperlink">here</a> and press "Send" to join.
+                        </p>
+                        <div class='row justify-content-start'>
+                            <div class='col-lg-8 align-items-center'>
+                                <a href='./img/newsletters/SMTD_6.pdf' target="_blank" style="text-decoration:none;">
+                                    <button type="button" class="nicelyRoundedButton webinarButton" style="margin:10px 6px 10px 0;">
+                                Newsletter #6
+                            </button>
+                                </a>
+                                <a href='./img/newsletters/SMTD_5.pdf' target="_blank" style="text-decoration:none;">
+                                    <button type="button" class="nicelyRoundedButton webinarButton" style="margin:10px 6px 10px 0;">
+                                Newsletter #5
+                            </button>
+                                </a>
+                                <a href='./img/newsletters/SMTD_4.pdf' target="_blank" style="text-decoration: none; padding: 0.25em 0;">
+                                    <button type="button" class="nicelyRoundedButton webinarButton" style="margin:10px 6px 10px 0;">
+                                Newsletter #4
+                            </button>
+                                </a>
+                                <a href='./img/newsletters/SMTD_3.pdf' target="_blank" style="text-decoration: none;padding: 0.25em 0;">
+                                    <button type="button" class="nicelyRoundedButton webinarButton" style="margin:10px 6px 10px 0;">
+                                Newsletter #3
+                            </button>
+                                </a>
+                                <a href='./img/newsletters/SMTD_2.pdf' target="_blank" style="text-decoration: none; padding: 0.25em 0;">
+                                    <button type="button" class="nicelyRoundedButton webinarButton" style="margin:10px 6px 10px 0;">
+                                Newsletter #2
+                            </button>
+                                </a>
+                                <a href='./img/newsletters/SMTD_1.pdf' target="_blank" style="text-decoration: none; padding: 0.25em 0;">
+                                    <button type="button" class="nicelyRoundedButton webinarButton" style="margin:10px 6px 10px 0;">
+                                Newsletter #1
+                            </button>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
     </main>
 
     <footer class="page-footer footerVerB">
