Add button to educators page

--- a/for_educators.html
+++ b/for_educators.html
@@ -188,7 +188,7 @@
 
             <!-- Content Row 2 -->
             <div class="row align-items-center paddedRow">
-                <div class="col-md-6 order-2 order-md-1">
+                <div class="col-md-6 order-2 order-md-1 text-center">
                     <img width="80%" src="img/newsletters.svg" alt="">
                 </div>
                 <div class='col-md-6 order-1 order-md-2'>
@@ -199,9 +199,13 @@
                     <h4>
                         Our past newsletters can be found <a href="/webinars.html#newsletters" target="_blank">here</a>.
                     </h4>
-                    <h4>To join our e-mail listserv and receive future newsletters, click
-                        <a href="mailto:TESTDRIVE-L-request@cornell.edu?Subject=Join" target="_blank">here</a> and press "Send" to join.
+                    <h4>To join our e-mail listserv and receive future newsletters, click the button below, then press "Send" to join.
                     </h4>
+                    <a href="mailto:TESTDRIVE-L-request@cornell.edu?Subject=Join" target="_blank" style="text-decoration:none;">
+                        <button type="button" class="nicelyRoundedButton">
+            Sign up
+          </button>
+                    </a>
                 </div>
             </div>
             <!-- Testimonials (to be included later, need to sort out permissions)-->
