Test: Make edits to banner and research study description; Update user number

--- a/index2.html
+++ b/index2.html
@@ -133,8 +133,8 @@
           </svg>
                     <!-- Announcement Banner Text -->
                     <p style="word-break: break-word; white-space: normal;">
-                        <span class="largeText boldText">NOW recruiting educators!</span> Help us learn how AI can help teach teens how to navigate social media by trying out the latest GPT-based educational chatbot builder that lets you shape this process.
-                        As a thank you, you will receive a
+                        <span class="largeText boldText">NOW recruiting educators!</span> Help us learn how AI can help teach teens how to navigate social media safely and responsibly by trying out the latest GPT-based educational chatbot builder that
+                        lets you shape this process. As a thank you, you will receive a
                         <span class="boldText">$25 compensation</span>.
                         <span class="boldText">Sign up <a href="https://docs.google.com/forms/d/e/1FAIpQLSeriOcIyyFkyNVpMPl9f0dvnVB23tgcajcRsOwwqRaOprEvxw/viewform" target="_top" class="customHyperlink">here</a> or contact
                         <a href="mailto:mah499@cornell.edu" target="_top" class="customHyperlink">mah499@cornell.edu</a> to learn more!</span>
