--- a/research2.html
+++ b/research2.html
@@ -138,9 +138,11 @@
                     Fall 2023: GPT-based Educational Chatbot Builder study
                 </h3>
                 <br>
-                <p class="researchParagraph">How are teens taught about navigating social media, and how can AI help? This remote study invites educators to try out the latest GPT-based educational chatbot builder that lets you shape this process.
+                <p style="margin-bottom: 15px;">How are teens taught to navigate social media safely and responsibly, and how can AI help? </p>
+                <p style="margin-bottom: 15px;">This study invites educators to try out our latest GPT-based educational chatbot builder and build their own chatbot. No technical background is necessary. The goal is to better understand, from the perspective of the educators, how teens
+                    are taught about navigating social media, how conversational AI can help this education process, and which tools educators need to influence and shape this education process.
                 </p>
-                <p>The Zoom interview typically takes 1 hour. You will receive $25 per hour for your participation. To learn more about this study and participate, <a href="https://docs.google.com/forms/d/e/1FAIpQLSeriOcIyyFkyNVpMPl9f0dvnVB23tgcajcRsOwwqRaOprEvxw/viewform"
+                <p>The study is a 1 hour remote interview via Zoom. You will receive $25 per hour for your participation. To learn more about this study and participate, <a href="https://docs.google.com/forms/d/e/1FAIpQLSeriOcIyyFkyNVpMPl9f0dvnVB23tgcajcRsOwwqRaOprEvxw/viewform"
                         target="_none" class="customHyperlink">please sign up here</a>, or email us at <a href="mailto:mah499@cornell.edu" target="_top" class="customHyperlink">mah499@cornell.edu</a>.
                 </p>
             </div>
