--- a/research.html
+++ b/research.html
@@ -138,8 +138,8 @@
                     Fall 2023: GPT-based Educational Chatbot Builder study
                 </h3>
                 <br>
-                <p class="researchParagraph">This study aims to better understand, from the perspective of the educators, how teens are taught to navigate social media, how conversational AI can help this education process, and which tools are needed by educators to influence and
-                    shape the process. To learn more about this study and how you can participate, <a href="convoai_chatbot_research_opp.pdf" target="_none" class="customHyperlink">please click here</a>, or email us at <a href="mailto:mah499@cornell.edu"
+                <p class="researchParagraph">This study aims to better understand, from the perspective of the educators, how teens are taught about navigating social media, how conversational AI can help this education process, and which tools educators would need to influence and
+                    shape this education process. To learn more about this study and how you can participate, <a href="convoai_chatbot_research_opp.pdf" target="_none" class="customHyperlink">please click here</a>, or email us at <a href="mailto:mah499@cornell.edu"
                         target="_top" class="customHyperlink">mah499@cornell.edu</a>.
                 </p>
             </div>
