Draft: For Researchers page

--- a/for_researchers5.html
+++ b/for_researchers5.html
@@ -8,11 +8,10 @@
     <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="styles/all.css" media="all">
-    <link rel="stylesheet" type="text/css" href="styles/webinarBanner.css" media="all">
-    <link rel="stylesheet" type="text/css" href="styles/newsletters.css" media="all">
+    <link rel="stylesheet" type="text/css" href="styles/announcementBanner.css" media="all">
+    <link rel="stylesheet" type="text/css" href="styles/forresearchers2.css" media="all">
     <link rel="stylesheet" type="text/css" href="styles/header2.css" media="all">
     <link rel="stylesheet" type="text/css" href="styles/footer.css" media="all">
-    <link rel="stylesheet" type="text/css" href="styles/announcementBanner.css" media="all">
     <meta name='twitter:card' content="summary">
     <meta name='twitter:title' content="Social Media TestDrive">
     <meta name='twitter:description' content="Welcome to the Social Media TestDrive official website!">
@@ -46,7 +45,7 @@
 
         gtag('config', 'G-BVBF8VW9D6');
     </script>
-    <title>Social Media TestDrive</title>
+    <title> TestDrive for Researchers</title>
 </head>
 
 <body>
@@ -77,13 +76,13 @@
                         <a class="nav-link" href="for_parents.html">For Parents</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="research.html">Research</a>
+                        <a class="nav-link" href="for_researchers5.html">For Researchers</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="research.html">Our Research</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="faq.html">FAQ</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="newsletters.html">Newsletters</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="team.html">Team</a>
@@ -105,97 +104,93 @@
             </div>
         </nav>
     </header>
-
     <main>
         <div class='container-fluid'>
-            <div class='row justify-content-center footerPageTitle'>
-                <div class='col-12 text-center'>
-                    <h1>Newsletters</h1>
+            <!-- Content Row 1 -->
+            <div class="row paddedRow">
+                <div class='col-md-5 order-2 order-md-1'>
+                    <img class="educators_image" src="img/researchers_1.svg" alt="" width="100%">
+                </div>
+                <div class="col-md-7 order-1 order-md-2">
+                    <h1>Use Social Media TestDrive in your research</h1>
+                    <h4>
+                        Social Media TestDrive is built on proven effective learning theories and can serve as a foundation for numerous research questions.
+                    </h4>
+                    <h4>If you decide to use TestDrive in your research, we request that you <b>complete the following questionnaire</b>. This questionnaire is a non-binding survey that informs us about how you plan to use TestDrive and gives us a better
+                        understanding of how researchers are using the platform.
+                    </h4>
+                    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSf54S27W2e94GmQccClZeR960k5OLNL3DsTnBMnoDem9acq5g/viewform?embedded=true " onload="loaded()" width="100%" height="1350px" frameborder="0 " marginheight="0 " marginwidth="0 ">Loading…</iframe>
                 </div>
             </div>
 
-            <!-- Cpntent -->
-            <div class="row newslettersRow">
-                <div class="col-md-5">
-                    <img id="newsletter_img" src="img/newsletters.svg" alt="">
+            <!-- Content Row 2-->
+            <div class="row align-items-center paddedRow">
+                <div class='col-md-5 order-2 order-md-1'>
+                    <h1 style="text-align: center;">Additional points</h1>
                 </div>
-                <div class="col-md-7">
-                    <!-- <h1>
-                        
-                    </h1> -->
+                <div class='col-md-7 order-2 order-md-1'>
                     <h4>
-                        The Social Media TestDrive team regularly sends newsletters to parents and educators with updates about Social Media TestDrive. We include updates and information about new features, current research studies, answers to FAQs, and any new opportunities.
+                        When you have completed your study, please remember to:
+                        <ol>
+                            <li><b>Cite TestDrive (see the first publication below)</b> </li>
+                            <li><b>Share an end-of-study report with us at <a href="mailto:socialmediatestdrive@gmail.com">socialmediatestdrive@gmail.com.</a></b> We would love to hear your findings!</li>
+                            <li><b>Consider donating to TestDrive: </b>While Social Media TestDrive is a free resource, we appreciate and rely on donations to keep it active and cover the service and support costs. Feel free to make a donation <a href="donate.html ">here</a>.
+                            </li>
+                        </ol>
+                    </h4>
+                </div>
+            </div>
+
+            <!-- Content Row 3-->
+            <div class="row align-items-center paddedRow">
+                <div class='col-md-5 order-2 order-md-1'>
+                    <h1 style="text-align: center;">Publications & resources</h1>
+                </div>
+                <div class='col-md-7 order-2 order-md-1'>
+                    <h4>You may find our published research and findings to be helpful for your research study. The following papers give an overview and history of Social Media TestDrive, as well as the underlying theory behind the platform. The last paper
+                        also provides a developed and validated inventory of social media literacy measures.</h4>
+                    <h4 style="margin-bottom: 0.75em;">
+                        DiFranzo, D., Choi, Y.H., Purington, A., Taft, J.G., Whitlock, J., Bazarova, N.N. (2019). <a href="https://dl.acm.org/doi/10.1145/3290605.3300533 ">Social Media TestDrive: Real-World social media education for the next generation.</a>                        In Proceedings of the 2019 ACM Conference on Human Factors in Computing Systems (CHI’19). Glasgow, UK.
                     </h4>
                     <h4>
-                        Below, you can find our past newsletters, listed from the most recent to the least recent.
+                        Purington Drake, A., Masur, P.K., Bazarova, N.N., Zou, E., & Whitlock, J. (in press). <a href="https://www.tandfonline.com/doi/full/10.1080/17482798.2023.2230493 ">The Youth Social Media Literacy Scale: Scale Development and Validation Using Item Response Theory.</a>                        Journal of Children and Media.
                     </h4>
-                    <div class="row flex-column">
-                        <a href='./img/newsletters/SMTD_6.pdf' target="_blank" style="text-decoration: none; padding: 0.25em 0;">
-                            <button class="newsletterButton" type="button">
-                                Newsletter #6
-                            </button>
-                        </a>
-                        <a href='./img/newsletters/SMTD_5.pdf' target="_blank" style="text-decoration: none; padding: 0.25em 0;">
-                            <button class="newsletterButton" type="button">
-                                Newsletter #5
-                            </button>
-                        </a>
-                        <a href='./img/newsletters/SMTD_4.pdf' target="_blank" style="text-decoration: none; padding: 0.25em 0;">
-                            <button class="newsletterButton" type="button">
-                                Newsletter #4
-                            </button>
-                        </a>
-                        <a href='./img/newsletters/SMTD_3.pdf' target="_blank" style="text-decoration: none;padding: 0.25em 0;">
-                            <button class="newsletterButton" type="button">
-                                Newsletter #3
-                            </button>
-                        </a>
-                        <a href='./img/newsletters/SMTD_2.pdf' target="_blank" style="text-decoration: none; padding: 0.25em 0;">
-                            <button class="newsletterButton" type="button">
-                                Newsletter #2
-                            </button>
-                        </a>
-                        <a href='./img/newsletters/SMTD_1.pdf' target="_blank" style="text-decoration: none; padding: 0.25em 0;">
-                            <button class="newsletterButton" type="button">
-                                Newsletter #1
-                            </button>
-                        </a>
-                    </div>
                 </div>
             </div>
-            <!-- Join List-serv Section -->
-            <div class="container-fluid paddedRow">
-                <!-- Title -->
-                <div class="row justify-content-center">
-                    <div class="col text-center">
-                        <h1> Want to receive the newsletters? </h1>
-                    </div>
-                </div>
+        </div>
 
-                <!-- Subtext -->
-                <div class="row justify-content-center">
-                    <div class="col-sm-8 col-md-8 col-lg-4 text-center">
-                        <h4 class="listServSubtext">
-                            You can join our e-mail listserv to hear the latest news about Social Media TestDrive.
-                        </h4>
-                        <h4>
-                            Click the button below and press "Send" to join.
-                        </h4>
-                    </div>
-                </div>
-
-                <!-- Join List-serv Button -->
-                <div class="row justify-content-center" style="padding-bottom:2em;">
-                    <div class="col d-flex justify-content-center">
-                        <a href="mailto:TESTDRIVE-L-request@cornell.edu?Subject=Join" target="_top" class="customHyperlink">
-                            <button type="button" class="nicelyRoundedButton">
-              Sign up
-            </button>
-                        </a>
-                    </div>
+        <!-- Got More Questions Section -->
+        <div class="container-fluid paddedRow">
+            <!-- Title -->
+            <div class="row justify-content-center">
+                <div class="col text-center">
+                    <h1> Do you have more questions? </h1>
                 </div>
             </div>
+
+            <!-- Subtext -->
+            <div class="row justify-content-center">
+                <div class="col-sm-8 col-md-8 col-lg-4 text-center">
+                    <h4>
+                        Check out our <a href="/faq.html">FAQ</a> for more details about how parents and guardians can use Social Media TestDrive, or contact us using the e-mail below.
+                    </h4>
+                </div>
+            </div>
+
+            <!-- Button -->
+            <div class="row addPaddingBottom justify-content-center">
+                <div class="col d-flex justify-content-center">
+                    <a href="mailto:socialmediatestdrive@gmail.com" target="_top">
+                        <button type="button" class="nicelyRoundedButton">
+                Contact us
+              </button>
+                    </a>
+                </div>
+            </div>
+        </div>
+        </div>
     </main>
+
     <footer class="page-footer footerVerB">
         <div class="container-fluid">
             <div class="row align-items-center footerRow">
@@ -220,16 +215,21 @@
         </div>
     </footer>
 
-    <!--<script src="nav.js"></script>-->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    <script>
-        $('#PDVideoModal').on('hide.bs.modal', function(e) {
-            var vid = document.getElementById("PDVideo");
-            vid.pause();
-            vid.load();
-        })
+    <script type="application/javascript">
+        var loadCounter = 0;
+        var loaded = function() {
+            loadCounter += 1;
+            if (loadCounter === 2) {
+                $("iframe").attr("height", "250px");
+                window.scrollTo({
+                    top: 0,
+                    behavior: 'smooth'
+                });
+            }
+        }
     </script>
 </body>
 
