--- a/for_researchers5.html
+++ b/for_researchers5.html
@@ -107,33 +107,40 @@
     <main>
         <div class='container-fluid'>
             <!-- Content Row 1 -->
-            <div class="row paddedRow">
+            <div class="row align-items-center paddedRow">
                 <div class='col-md-5 order-2 order-md-1'>
-                    <img class="educators_image" src="img/researchers_1.svg" alt="" width="100%">
+                    <img class=" educators_image " src="img/researchers_1.svg " alt=" " width="100% ">
                 </div>
-                <div class="col-md-7 order-1 order-md-2">
+                <div class="col-md-7 order-1 order-md-2 ">
                     <h1>Use Social Media TestDrive in your research</h1>
                     <h4>
                         Social Media TestDrive is built on proven effective learning theories and can serve as a foundation for numerous research questions.
                     </h4>
-                    <h4>If you decide to use TestDrive in your research, we request that you <b>complete the following questionnaire</b>. This questionnaire is a non-binding survey that informs us about how you plan to use TestDrive and gives us a better
+                    <h4>If you would like to use TestDrive in your research, we request that you <b>complete the following questionnaire</b>. This questionnaire is a non-binding survey that informs us about how you plan to use TestDrive and gives us a better
                         understanding of how researchers are using the platform.
                     </h4>
-                    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSf54S27W2e94GmQccClZeR960k5OLNL3DsTnBMnoDem9acq5g/viewform?embedded=true " onload="loaded()" width="100%" height="1350px" frameborder="0" marginheight="0 " marginwidth="0 ">Loading…</iframe>
                 </div>
             </div>
 
             <!-- Content Row 2-->
-            <div class="row align-items-center paddedRow">
-                <div class='col-md-5 order-2 order-md-1'>
-                    <h1 style="text-align: center;">Additional points</h1>
+            <div class="row justify-content-center">
+                <div class='col-md-12'>
+                    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSf54S27W2e94GmQccClZeR960k5OLNL3DsTnBMnoDem9acq5g/viewform?embedded=true " onload="loaded()" width="100%" height="1350px " frameborder="0 " marginheight="0 " marginwidth="0 ">Loading…</iframe>
                 </div>
-                <div class='col-md-7 order-2 order-md-1'>
+            </div>
+
+            <!-- Content Row 3-->
+            <div class="row align-items-center paddedRow">
+                <div class='col-md-5'>
+                    <h1 style="text-align: center; ">Additional points</h1>
+                </div>
+                <div class='col-md-7'>
                     <h4>
                         When you have completed your study, please remember to:
                         <ol>
                             <li><b>Cite TestDrive (see the first publication below)</b> </li>
-                            <li><b>Share an end-of-study report with us at <a href="mailto:socialmediatestdrive@gmail.com">socialmediatestdrive@gmail.com.</a></b> We would love to hear your findings!</li>
+                            <li><b>Share an end-of-study report with us at <a href="mailto:socialmediatestdrive@gmail.com
+                ">socialmediatestdrive@gmail.com.</a></b> We would love to hear your findings!</li>
                             <li><b>Consider donating to TestDrive: </b>While Social Media TestDrive is a free resource, we appreciate and rely on donations to keep it active and cover the service and support costs. Feel free to make a donation <a href="donate.html ">here</a>.
                             </li>
                         </ol>
@@ -141,15 +148,15 @@
                 </div>
             </div>
 
-            <!-- Content Row 3-->
+            <!-- Content Row 4-->
             <div class="row align-items-center paddedRow">
-                <div class='col-md-5 order-2 order-md-1'>
-                    <h1 style="text-align: center;">Publications & resources</h1>
+                <div class='col-md-5'>
+                    <h1 style="text-align: center; ">Publications & <br/>resources</h1>
                 </div>
-                <div class='col-md-7 order-2 order-md-1'>
+                <div class='col-md-7'>
                     <h4>You may find our published research and findings to be helpful for your research study. The following papers give an overview and history of Social Media TestDrive, as well as the underlying theory behind the platform. The last paper
                         also provides a developed and validated inventory of social media literacy measures.</h4>
-                    <h4 style="margin-bottom: 0.75em;">
+                    <h4 style="margin-bottom: 0.75em; ">
                         DiFranzo, D., Choi, Y.H., Purington, A., Taft, J.G., Whitlock, J., Bazarova, N.N. (2019). <a href="https://dl.acm.org/doi/10.1145/3290605.3300533 ">Social Media TestDrive: Real-World social media education for the next generation.</a>                        In Proceedings of the 2019 ACM Conference on Human Factors in Computing Systems (CHI’19). Glasgow, UK.
                     </h4>
                     <h4>
@@ -160,28 +167,28 @@
         </div>
 
         <!-- Got More Questions Section -->
-        <div class="container-fluid paddedRow">
+        <div class="container-fluid paddedRow ">
             <!-- Title -->
-            <div class="row justify-content-center">
-                <div class="col text-center">
+            <div class="row justify-content-center ">
+                <div class="col text-center ">
                     <h1> Do you have more questions? </h1>
                 </div>
             </div>
 
             <!-- Subtext -->
-            <div class="row justify-content-center">
-                <div class="col-sm-8 col-md-8 col-lg-4 text-center">
+            <div class="row justify-content-center ">
+                <div class="col-sm-8 col-md-8 col-lg-4 text-center ">
                     <h4>
-                        Check out our <a href="/faq.html">FAQ</a> for more details about how parents and guardians can use Social Media TestDrive, or contact us using the e-mail below.
+                        Check out our <a href="/faq.html ">FAQ</a> for more details about how parents and guardians can use Social Media TestDrive, or contact us using the e-mail below.
                     </h4>
                 </div>
             </div>
 
             <!-- Button -->
-            <div class="row addPaddingBottom justify-content-center">
-                <div class="col d-flex justify-content-center">
-                    <a href="mailto:socialmediatestdrive@gmail.com" target="_top">
-                        <button type="button" class="nicelyRoundedButton">
+            <div class="row addPaddingBottom justify-content-center ">
+                <div class="col d-flex justify-content-center ">
+                    <a href="mailto:socialmediatestdrive@gmail.com " target="_top ">
+                        <button type="button " class="nicelyRoundedButton ">
                 Contact us
               </button>
                     </a>
@@ -191,23 +198,23 @@
         </div>
     </main>
 
-    <footer class="page-footer footerVerB">
-        <div class="container-fluid">
-            <div class="row align-items-center footerRow">
-                <div class="col-auto mr-auto">
-                    <p class="footerLeftItem">Copyright &copy 2023 Social Media TestDrive</p>
+    <footer class="page-footer footerVerB ">
+        <div class="container-fluid ">
+            <div class="row align-items-center footerRow ">
+                <div class="col-auto mr-auto ">
+                    <p class="footerLeftItem ">Copyright &copy 2023 Social Media TestDrive</p>
                 </div>
-                <div class="col-auto">
-                    <a href="press.html" class="footer-link">Press</a>
+                <div class="col-auto ">
+                    <a href="press.html " class="footer-link ">Press</a>
                 </div>
-                <div class="col-auto">
-                    <a href="terms.html" class="footer-link">Terms & Copyright</a>
+                <div class="col-auto ">
+                    <a href="terms.html " class="footer-link ">Terms & Copyright</a>
                 </div>
-                <div class="col-auto">
-                    <a href="privacy.html" class="footer-link">Privacy Policy</a>
+                <div class="col-auto ">
+                    <a href="privacy.html " class="footer-link ">Privacy Policy</a>
                 </div>
-                <div class="col-auto">
-                    <a href="mailto:socialmediatestdrive@gmail.com" target="_top" class="footer-link">
+                <div class="col-auto ">
+                    <a href="mailto:socialmediatestdrive@gmail.com " target="_top " class="footer-link ">
             Contact Us
           </a>
                 </div>
@@ -215,15 +222,15 @@
         </div>
     </footer>
 
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    <script type="application/javascript">
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js " integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo " crossorigin="anonymous "></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js " integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1 " crossorigin="anonymous "></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js " integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM " crossorigin="anonymous "></script>
+    <script type="application/javascript ">
         var loadCounter = 0;
         var loaded = function() {
             loadCounter += 1;
             if (loadCounter === 2) {
-                $("iframe").attr("height", "250px");
+                $("iframe ").attr("height ", "250px ");
                 window.scrollTo({
                     top: 0,
                     behavior: 'smooth'
